gsm: Add a flag to show the fail whale dialog on request

https://bugzilla.gnome.org/show_bug.cgi?id=656747